Fix scrollbar showing on the right of equations.

--- a/style/main.css
+++ b/style/main.css
@@ -41,7 +41,8 @@ math{
   font-size: 1.1em;
   padding-top:0.6rem;
   padding-bottom:0.3rem;
-  overflow-y: scroll;
+  overflow-x: scroll;
+  overflow-y: hidden;
 }
 .illustration {
   max-width:100%;
